Revert "Fix horizontal scrolling for cs guide"
This reverts commit 374490ef74cc550d2fb86abc8cceb859700aa8fc.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,6 @@ html {
 a {
   cursor: pointer;
   color: $maroon;
-  word-wrap: break-word;
 }
 
 h1,
